feat: added pages styles

--- a/src/content/products/ru/krendelia/solionye/s-vetchinoi-i-syrom.yaml
+++ b/src/content/products/ru/krendelia/solionye/s-vetchinoi-i-syrom.yaml
@@ -1,9 +1,10 @@
-title: Крендель с ветчиной и сыром
+name: Крендель с ветчиной и сыром
 composition:
   - Крендельное тесто
   - Сыр
   - Ветчина
   - Яйцо
   - Укроп
+notes: Возможность доставки
 
 details: pretzels/salty/with-ham-and-cheese
