feat: added translations and sitemap

--- a/src/content/product-details/pretzels/sweet/with-cream-and-raisins.yaml
+++ b/src/content/product-details/pretzels/sweet/with-cream-and-raisins.yaml
@@ -1,7 +1,5 @@
 price: 15
 unit: kg
 
-thumbnail: ~/assets/products/pretzels/sweet/with-cream-and-raisins/thumbnail.jpg
-images:
-  - ~/assets/product-01.jpg
-  - ~/assets/product-02.jpg
+thumbnail: ~/assets/products/pretzels/sweet/with-cream-and-raisins.jpg
+images: []
