--- a/src/content/products/ru/pirozhnye/brauni.yaml
+++ b/src/content/products/ru/pirozhnye/brauni.yaml
@@ -1,4 +1,4 @@
-name: Пирожное брауни
+name: Пирожное "Брауни"
 composition:
   - Основа - брауни
   - Прослойка из сырного крема с добавлением Nutella
