--- a/src/content/product-details/pretzels/sweet/with-marzipan-and-cranberry.yaml
+++ b/src/content/product-details/pretzels/sweet/with-marzipan-and-cranberry.yaml
@@ -1,5 +1,5 @@
 price: 18
 unit: kg
 
-thumbnail: ~/assets/products/pretzels/sweet/with-cream-and-raisins/thumbnail.jpg
+thumbnail: ~/assets/products/fallback.png
 images: []
