feat(content-update): add cracked-choco and choco-roll images

--- a/src/content/product-details/rolls/chocolate-with-lingonberry-filling.yaml
+++ b/src/content/product-details/rolls/chocolate-with-lingonberry-filling.yaml
@@ -1,5 +1,5 @@
 price: 16
 unit: kg
 
-thumbnail: ~/assets/products/fallback.png
+thumbnail: ~/assets/products/rolls/chocolate-with-lingonberry-filling.jpg
 images: []
