--- a/src/content/product-details/cookies/cracked-chocolate.yaml
+++ b/src/content/product-details/cookies/cracked-chocolate.yaml
@@ -1,5 +1,5 @@
 price: 18
 unit: kg
 
-thumbnail: ~/assets/products/fallback.png
+thumbnail: ~/assets/products/cookies/cracked-choco-almond.jpg
 images: []
