--- a/package.json
+++ b/package.json
@@ -11,28 +11,28 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@ark-ui/solid": "^3.13.0",
-    "@astrojs/check": "^0.9.3",
-    "@astrojs/solid-js": "^4.4.2",
-    "astro": "^4.15.9",
+    "@ark-ui/solid": "^4.5.1",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/solid-js": "^4.4.4",
+    "astro": "^4.16.16",
     "astro-seo": "^0.8.4",
     "sharp": "^0.33.5",
-    "solid-js": "^1.9.1",
-    "typescript": "^5.6.2"
+    "solid-js": "^1.9.3",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.7.1",
-    "@iconify-json/bxl": "^1.2.0",
-    "@iconify-json/material-symbols": "^1.2.1",
+    "@antfu/eslint-config": "^3.11.2",
+    "@iconify-json/bxl": "^1.2.1",
+    "@iconify-json/material-symbols": "^1.2.8",
     "@solid-primitives/media": "^2.2.9",
-    "@unocss/eslint-plugin": "^0.62.4",
-    "@unocss/reset": "^0.62.4",
+    "@unocss/eslint-plugin": "0.64.1",
+    "@unocss/reset": "0.64.1",
     "astro-nanointl": "^1.0.0",
-    "eslint": "^9.11.1",
-    "eslint-plugin-astro": "^1.2.4",
-    "eslint-plugin-format": "^0.1.2",
-    "unocss": "^0.62.4",
-    "unplugin-icons": "^0.19.3",
-    "virtua": "^0.34.2"
+    "eslint": "^9.16.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-format": "^0.1.3",
+    "unocss": "0.64.1",
+    "unplugin-icons": "^0.20.2",
+    "virtua": "^0.38.1"
   }
 }
